--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -41,9 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Modeli\Korisnik.cs" />
+    <Compile Include="Modeli\Potrosnja.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servisi\ILogin.cs" />
+    <Compile Include="Servisi\IRegister.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Konekcija\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
