--- a/src/packages.config
+++ b/src/packages.config
@@ -1,7 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="SQLite" version="3.13.0" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.1.3" targetFramework="net472" />
+  <package id="SQLitePCLRaw.core" version="2.1.3" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.1.3" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.1.3" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.117.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.117.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.117.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.117.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
 </packages>
