Brojilo: Implement find by id

--- a/src/Cache Memory/Cache Memory.csproj
+++ b/src/Cache Memory/Cache Memory.csproj
@@ -85,6 +85,7 @@
     <Compile Include="DataAccessObject\Implementations\RegistracijaNaSistem.cs" />
     <Compile Include="DataAccessObject\Interfaces\ICRUD.cs" />
     <Compile Include="DataAccessObject\Interfaces\IKorisnici.cs" />
+    <Compile Include="DataTransferObject\TrenutniKorisnik\PrijavljeniKorisnik.cs" />
     <Compile Include="Models\Brojilo.cs" />
     <Compile Include="Models\EvidencijaPotrosnje.cs" />
     <Compile Include="Models\Korisnik.cs" />
