Prepare new DAO

--- a/src/Cache Memory/Cache Memory.csproj
+++ b/src/Cache Memory/Cache Memory.csproj
@@ -77,7 +77,9 @@
     <Compile Include="Connection\ConnectionParameters.cs" />
     <Compile Include="Connection\ConnectionPool.cs" />
     <Compile Include="DataAccessObject\Implementations\Brojila.cs" />
+    <Compile Include="DataAccessObject\Implementations\BelezenjeEvidencijaPotrosnje.cs" />
     <Compile Include="DataAccessObject\Interfaces\IBrojila.cs" />
+    <Compile Include="DataAccessObject\Interfaces\IBelezenjeEvidencijaPotrosnje.cs" />
     <Compile Include="DataAccessObject\Interfaces\IRegistracijaNaSistem.cs" />
     <Compile Include="DataAccessObject\Interfaces\IPrijavaNaSistem.cs" />
     <Compile Include="DataAccessObject\Implementations\Korisnici.cs" />
