--- a/src/User Interface/User Interface.csproj
+++ b/src/User Interface/User Interface.csproj
@@ -61,9 +61,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Dashboard\KorisnickaTabla.xaml.cs">
+      <DependentUpon>KorisnickaTabla.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Registracija\RegistracijaKorisnika.xaml.cs">
       <DependentUpon>RegistracijaKorisnika.xaml</DependentUpon>
     </Compile>
+    <Page Include="Dashboard\KorisnickaTabla.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
