--- a/src/DumpingBuffer/DumpingBuffer.csproj
+++ b/src/DumpingBuffer/DumpingBuffer.csproj
@@ -42,11 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementations\DumpingBuffer.cs" />
     <Compile Include="Interfaces\IDumpingBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Implementations\" />
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{DEAF10FD-CB23-4099-85A7-4C7D32AB45E8}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
