--- a/src/Dumping Buffer Component/packages.config
+++ b/src/Dumping Buffer Component/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
-  <package id="Moq" version="4.18.4" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" requireReinstallation="true" />
+  <package id="Moq" version="4.18.4" targetFramework="net48" requireReinstallation="true" />
   <package id="NUnit" version="3.13.3" targetFramework="net48" />
   <package id="NUnit3TestAdapter" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
